--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,39 @@
   <groupId>com.javacodegeeks</groupId>
   <artifactId>SampleWebApplication</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>SampleWebApplication Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+        <jdk.version>1.8</jdk.version>
+        <spring.version>5.1.2.RELEASE</spring.version>
+        <junit.version>4.11</junit.version>
+        <log4j.version>1.2.17</log4j.version>
+        <sonar.host.url>http:34.201.127.52:9000/</sonar.host.url>
+        <sonar.login>admin</sonar.login>
+        <sonar.password>admin</sonar.password>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
+
+
+  <distributionManagement>
+            <repository>
+              <id>nexus</id>
+              <name>Landmark Technologies Releases Nexus Repository</name>
+              <url>http://34.229.97.97:8081/repository/swa1-releases/</url>
+            </repository>
+
+            <snapshotRepository>
+              <id>nexus</id>
+              <name>Landmark Technologies Snapshot Nexus Repository </name>
+              <url>http://34.229.97.97:8081/repository/swa1-snapshots/</url>
+            </snapshotRepository>
+
+  </distributionManagement>
+
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -15,7 +45,14 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
   <build>
     <finalName>SampleWebApplication</finalName>
   </build>
 </project>
+~
+~
+~
+~
+~
+~
