--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.javacodegeeks</groupId>
   <artifactId>SampleWebApplication</artifactId>
   <packaging>war</packaging>
-  <version>1.0</version>
+  <version>1.0.6</version>
   <name>SampleWebApplication Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
@@ -13,7 +13,7 @@
         <spring.version>5.1.2.RELEASE</spring.version>
         <junit.version>4.11</junit.version>
         <log4j.version>1.2.17</log4j.version>
-        <sonar.host.url>http:34.201.127.52:9000/</sonar.host.url>
+        <sonar.host.url>http:54.175.182.76:9000/</sonar.host.url>
         <sonar.login>admin</sonar.login>
         <sonar.password>admin</sonar.password>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,14 +24,14 @@
   <distributionManagement>
             <repository>
               <id>nexus</id>
-              <name>Landmark Technologies Releases Nexus Repository</name>
-              <url>http://34.229.97.97:8081/repository/swa1-releases/</url>
+              <name>Joeysparks Releases Nexus Repository</name>
+	      <url>http://52.207.150.149:8081/repository/swa6-releases/</url>
             </repository>
 
             <snapshotRepository>
               <id>nexus</id>
-              <name>Landmark Technologies Snapshot Nexus Repository </name>
-              <url>http://34.229.97.97:8081/repository/swa1-snapshots/</url>
+              <name>Joeysparkx Snapshot Nexus Repository </name>
+	      <url>http://52.207.150.149:8081/repository/swa6-snapshot/</url>
             </snapshotRepository>
 
   </distributionManagement>
